--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: SM Maione # the website title (if blank, full name will be used instead)
+title: Samuel M. Maione # the website title (if blank, full name will be used instead)
 first_name: Samuel
 middle_name: M.
 last_name: Maione
@@ -287,11 +287,11 @@ scholar:
 
 # Display different badges withs stats for your publications
 # Customize badge behavior in _layouts/bib.liquid
-enable_publication_badges: false # sm
-  altmetric: true # Altmetric badge (Customization options: https://badge-docs.altmetric.com/index.html)
-  dimensions: true # Dimensions badge (Customization options: https://badge.dimensions.ai/)
-  google_scholar: true # Google Scholar badge (https://scholar.google.com/intl/en/scholar/citations.html)
-  inspirehep: true # Inspire HEP badge (https://help.inspirehep.net/knowledge-base/citation-metrics/)
+# enable_publication_badges: false # sm
+#  altmetric: true # Altmetric badge (Customization options: https://badge-docs.altmetric.com/index.html)
+#  dimensions: true # Dimensions badge (Customization options: https://badge.dimensions.ai/)
+#  google_scholar: true # Google Scholar badge (https://scholar.google.com/intl/en/scholar/citations.html)
+#  inspirehep: true # Inspire HEP badge (https://help.inspirehep.net/knowledge-base/citation-metrics/)
 
 # Filter out certain bibtex entry keywords used internally from the bib output
 filtered_bibtex_keywords:
