--- a/_config.yml
+++ b/_config.yml
@@ -192,6 +192,7 @@ exclude:
   - _pages/profiles.md
   - _pages/repositories.md
   - _pages/teaching.md
+  - _pages/projects.md
   - purgecss.config.js
   - README.md
   - readme_preview/
